--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,7 +13,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - fat32 file system with buffered IO
 - disk hal 
 - virtio, virtio_blk driver
-- vmem interface
+- pte interface
 - kernel interrupt handler
 
 
