add: update suplimentary doc

--- a/doc/补充文档.md
+++ b/doc/补充文档.md
@@ -1,9 +1,9 @@
 # 补充文档
 
-由于测评机没有CMake的编译环境，所以在测评机上不能编译。
+由于我们准备不充分，没有提前进行测试，没有发现测评机没有CMake的编译环境，所以在测评机上未能通过编译。
 
-由于没还有实现init进程，目前的测评并不能跑起来。。
+由于没还有实现init进程，目前的测评并不能进行。
 
 所以现在可以通过的测试用例为0个。
 
-已经实现的系统调用有：openat, getpid, getppid, read。exit, chdir, sched_yield.
+但是一些系统调用是已经实现了的，已经实现的系统调用有：openat, getpid, getppid, read。exit, chdir, sched_yield.
