add, suplimentary dco update

--- a/doc/补充文档.md
+++ b/doc/补充文档.md
@@ -7,3 +7,5 @@
 所以现在可以通过的测试用例为0个。
 
 但是一些系统调用是已经实现了的，已经实现的系统调用有：openat, getpid, getppid, read。exit, chdir, sched_yield.
+
+总体上来说，由于是从头开始写（没有不是在xv6-k210上修改系统调用)，所以我们项目的工程量比较大，除去K210的官方驱动部分，我们在GitHub仓库中的commits记录的代码行数已经达到了13000+。从功能上来说，我们的代码目前主要集中于之前的文档中所描述的内存管理、文件系统、进程管理的部分。
